# Client

./: .gitignore  Cargo.toml  README.MD
src/: keyboard.rs  main.rs  startup.rs  states.rs
src/camera/: camera.rs  camera_movement.rs  game_camera.rs  mod.rs  util.rs
src/cameras/: camera_handle.rs  cameras.rs  mod.rs  util.rs
src/cameras/game_camera/: camera_movement.rs  mod.rs
src/cameras/menu_camera/: mod.rs
src/entities/: decors.rs  mod.rs  player.rs  structures.rs
src/scenes/: mod.rs  start_menu.rs  village.rs
src/structures/: head_quarters.rs  mana_generator.rs  mod.rs  structures.rs
src/uis/: menu.rs  mod.rs  village.rs
